SERVER-16469 findAndModify runImpl(): improve error reporting

Previously, findAndModify ignored errors encountered in calls to
PlanExecutor::getNext() when searching for the document to modify.
Now, errors are bubbled up to the user.